--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "node index.js"
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
     "fastify": "^4.23.0"
   },
   "devDependencies": {
+    "@tsconfig/node18": "^18.2.1",
     "@types/node": "^20.6.0",
     "typescript": "^5.2.2"
   }
