--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "node ./dist/index.js"
+    "start": "nodemon ./dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@tsconfig/node18": "^18.2.1",
     "@types/node": "^20.6.0",
+    "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
   }
 }
