--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "nodemon ./dist/index.js"
+    "start": "nodemon ./dist/index.js",
+    "compile-schemas": "json2ts -i ./src/schemas -o ./src/types"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/type-provider-typebox": "^3.5.0",
+    "@sinclair/typebox": "^0.31.14",
     "fastify": "^4.23.0"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.1",
     "@types/node": "^20.6.0",
+    "json-schema-to-typescript": "^13.1.1",
     "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
   }
