--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc -p tsconfig.json",
     "start": "nodemon ./dist/index.js",
     "compile-schemas": "json2ts -i ./src/schemas -o ./src/types",
-    "watch:tsc": "tsc -p tsconfig.json --watch"
+    "watch:tsc": "tsc -p tsconfig.json --watch",
+    "lint:prettier": "prettier -w ."
   },
   "keywords": [],
   "author": "",
