--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "spiffy",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "start": "nodemon ./dist/index.js",
@@ -11,7 +11,7 @@
     "lint:prettier": "prettier -w ."
   },
   "keywords": [],
-  "author": "",
+  "author": "rickhallett",
   "license": "ISC",
   "dependencies": {
     "@fastify/type-provider-typebox": "^3.5.0",
