feat(core): added prisma plugin and use in createUser root

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/type-provider-typebox": "^3.5.0",
+    "@prisma/client": "^5.2.0",
     "@sinclair/typebox": "^0.31.14",
     "fastify": "^4.23.0",
     "fastify-plugin": "^4.5.1"
@@ -26,6 +27,7 @@
     "json-schema-to-ts": "^2.9.2",
     "json-schema-to-typescript": "^13.1.1",
     "nodemon": "^3.0.1",
+    "prisma": "^5.2.0",
     "typescript": "^5.2.2"
   }
 }
