--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "rickhallett",
   "license": "ISC",
   "dependencies": {
+    "@fastify/autoload": "^5.7.1",
     "@fastify/type-provider-typebox": "^3.5.0",
     "@prisma/client": "^5.2.0",
     "@sinclair/typebox": "^0.31.14",
