--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@fastify/autoload": "^5.7.1",
     "@fastify/basic-auth": "^5.0.0",
     "@fastify/routes": "^5.1.0",
+    "@fastify/swagger": "^8.10.0",
+    "@fastify/swagger-ui": "^1.9.3",
     "@fastify/type-provider-typebox": "^3.5.0",
     "@prisma/client": "^5.2.0",
     "@sinclair/typebox": "^0.31.14",
     "fastify": "^4.23.0",
-    "fastify-plugin": "^4.5.1"
+    "fastify-plugin": "^4.5.1",
+    "rfdc": "^1.3.0"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.1",
