--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "rickhallett",
   "license": "ISC",
   "dependencies": {
+    "@clerk/fastify": "^0.6.6",
     "@fastify/autoload": "^5.7.1",
     "@fastify/basic-auth": "^5.0.0",
     "@fastify/routes": "^5.1.0",
