--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@fastify/type-provider-typebox": "^3.5.0",
     "@prisma/client": "^5.2.0",
     "@sinclair/typebox": "^0.31.14",
+    "dotenv": "^16.3.1",
     "fastify": "^4.23.0",
     "fastify-plugin": "^4.5.1",
     "rfdc": "^1.3.0"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.1",
+    "@types/dotenv": "^8.2.0",
     "@types/node": "^20.6.0",
     "json-schema-to-ts": "^2.9.2",
     "json-schema-to-typescript": "^13.1.1",
