--- a/package.json
+++ b/package.json
@@ -27,16 +27,16 @@
     "dotenv": "^16.3.1",
     "fastify": "^4.23.0",
     "fastify-plugin": "^4.5.1",
-    "rfdc": "^1.3.0"
-  },
-  "devDependencies": {
-    "@tsconfig/node18": "^18.2.1",
-    "@types/dotenv": "^8.2.0",
-    "@types/node": "^20.6.0",
+    "rfdc": "^1.3.0",
     "json-schema-to-ts": "^2.9.2",
     "json-schema-to-typescript": "^13.1.1",
     "nodemon": "^3.0.1",
     "prisma": "^5.2.0",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@tsconfig/node18": "^18.2.1",
+    "@types/dotenv": "^8.2.0",
+    "@types/node": "^20.6.0"
   }
 }
