--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fastify-plugin": "^4.5.1",
     "json-schema-to-ts": "^2.9.2",
     "json-schema-to-typescript": "^13.1.1",
+    "mongodb": "^6.0.0",
     "nodemon": "^3.0.1",
     "prisma": "^5.2.0",
     "rfdc": "^1.3.0",
