--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "./dist/index.js",
   "types": "index.d.ts",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "start": "nodemon ./dist/index.js",
+    "build": "npm run format && tsc -p tsconfig.json",
+    "start:dev": "nodemon ./dist/index.js",
+    "start:all": "concurrently \"npm:watch:tsc\" \"npm:start:dev\"",
     "start:heroku": "node ./dist/index.js",
     "compile-schemas": "json2ts -i ./src/schemas -o ./src/types",
     "watch:tsc": "tsc -p tsconfig.json --watch",
@@ -26,8 +27,11 @@
     "@fastify/type-provider-typebox": "^3.5.0",
     "@prisma/client": "^5.2.0",
     "@sinclair/typebox": "^0.31.14",
+    "concurrently": "^8.2.1",
     "dotenv": "^16.3.1",
     "fastify": "^4.23.0",
+    "fastify-blipp": "^4.0.0",
+    "fastify-crud-generator": "^1.0.1",
     "fastify-plugin": "^4.5.1",
     "json-schema-to-ts": "^2.9.2",
     "json-schema-to-typescript": "^13.1.1",
