--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "compile-schemas": "json2ts -i ./src/schemas -o ./src/types",
     "watch:tsc": "tsc -p tsconfig.json --watch",
     "format": "prettier -w .",
-    "deploy": "npx prisma db push && npx prisma generate && npm run start:heroku"
+    "deploy": "npx prisma db push && npx prisma generate && npm run start:heroku",
+    "benchmark": "npm run benchmark"
   },
   "keywords": [],
   "author": "rickhallett",
@@ -27,11 +28,13 @@
     "@fastify/type-provider-typebox": "^3.5.0",
     "@prisma/client": "^5.2.0",
     "@sinclair/typebox": "^0.31.14",
+    "autocannon": "^7.12.0",
     "concurrently": "^8.2.1",
     "dotenv": "^16.3.1",
     "fastify": "^4.23.0",
     "fastify-blipp": "^4.0.0",
     "fastify-crud-generator": "^1.0.1",
+    "fastify-markdown": "^0.4.0",
     "fastify-plugin": "^4.5.1",
     "json-schema-to-ts": "^2.9.2",
     "json-schema-to-typescript": "^13.1.1",
