--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "json-schema-to-typescript": "^13.1.1",
     "mongodb": "^6.0.0",
     "nodemon": "^3.0.1",
+    "prettier": "^3.0.3",
     "prisma": "^5.2.0",
     "rfdc": "^1.3.0",
     "typescript": "^5.2.2"
