--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "concurrently": "^8.2.1",
     "dotenv": "^16.3.1",
     "fastify": "^4.23.0",
+    "fastify-bcrypt": "^1.0.1",
     "fastify-blipp": "^4.0.0",
     "fastify-crud-generator": "^1.0.1",
     "fastify-markdown": "^0.4.0",
