--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
     // "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
     "paths": {
+      "@docs/*": ["./src/docs/*"],
       "@routes/*": ["./src/routes/*"],
       "@plugins/*": ["./src/plugins/*"],
       "@root/*": ["./src/*"],
