--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "@clerk/fastify": "^0.6.6",
+    "@faker-js/faker": "^8.0.2",
     "@fastify/autoload": "^5.7.1",
     "@fastify/basic-auth": "^5.0.0",
     "@fastify/routes": "^5.1.0",
