--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@faker-js/faker": "^8.0.2",
     "@fastify/autoload": "^5.7.1",
     "@fastify/basic-auth": "^5.0.0",
+    "@fastify/one-line-logger": "^1.2.0",
     "@fastify/routes": "^5.1.0",
+    "@fastify/schedule": "^4.1.1",
+    "@fastify/sensible": "^5.2.0",
     "@fastify/swagger": "^8.10.0",
     "@fastify/swagger-ui": "^1.9.3",
     "@fastify/type-provider-typebox": "^3.5.0",
@@ -46,12 +49,15 @@
     "prettier": "^3.0.3",
     "prisma": "^5.2.0",
     "rfdc": "^1.3.0",
+    "swagger-jsdoc": "^6.2.8",
+    "toad-scheduler": "^3.0.0",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.1",
     "@types/dotenv": "^8.2.0",
-    "@types/node": "^20.6.0"
+    "@types/node": "^20.6.0",
+    "@types/swagger-jsdoc": "^6.0.1"
   },
   "_moduleAliases": {
     "@root": "dist/",
