feat(core): user auth routes; TODO: apply to other routes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,7 @@
       "@docs/*": ["./src/docs/*"],
       "@routes/*": ["./src/routes/*"],
       "@plugins/*": ["./src/plugins/*"],
+      "@models/*": ["./src/models/*"],
       "@root/*": ["./src/*"],
     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
