--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@clerk/fastify": "^0.6.6",
     "@faker-js/faker": "^8.0.2",
+    "@fastify/auth": "^4.3.0",
     "@fastify/autoload": "^5.7.1",
     "@fastify/basic-auth": "^5.0.0",
     "@fastify/one-line-logger": "^1.2.0",
@@ -33,16 +34,17 @@
     "@prisma/client": "^5.2.0",
     "@sinclair/typebox": "^0.31.14",
     "autocannon": "^7.12.0",
+    "bcrypt": "^5.1.1",
     "concurrently": "^8.2.1",
     "dotenv": "^16.3.1",
     "fastify": "^4.23.0",
-    "fastify-bcrypt": "^1.0.1",
     "fastify-blipp": "^4.0.0",
     "fastify-crud-generator": "^1.0.1",
     "fastify-markdown": "^0.4.0",
     "fastify-plugin": "^4.5.1",
     "json-schema-to-ts": "^2.9.2",
     "json-schema-to-typescript": "^13.1.1",
+    "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
     "mongodb": "^6.0.0",
     "nodemon": "^3.0.1",
@@ -55,7 +57,9 @@
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.6.0",
     "@types/swagger-jsdoc": "^6.0.1"
   },
@@ -63,6 +67,7 @@
     "@root": "dist/",
     "@routes": "dist/routes",
     "@plugins": "dist/plugins",
-    "@docs": "dist/docs"
+    "@docs": "dist/docs",
+    "@models": "dist/models"
   }
 }
