--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,7 @@
       "@plugins/*": ["./src/plugins/*"],
       "@models/*": ["./src/models/*"],
       "@root/*": ["./src/*"],
+      "@utils/*": ["./src/utils/*"],
     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
